Fix dark mode

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -45,7 +45,7 @@
   --valid-color: #43A047;
   --invalid-color: #E53935;
   --yellow-color: #FFB300;
-  --header-background-color: #252525;
+  --header-background-color: #272727;
   --input-border-color: #323232;
   --shadow: 0 8px 16px rgba(0, 0, 0, .05);
   --border: 1px solid var(--input-border-color);
